Showed todo on main page with map function

--- a/index.html
+++ b/index.html
@@ -78,96 +78,16 @@
     </header>
 
     <main id="todoShowBox">
-      <div class="todoContainer todayContainer">
+      <div class="todoContainer todayContainer" id="todoBoxContainer">
         <p class="todoTitle">Today</p>
 
-        <div class="todoList">
-          <div class="todoIcon">
-            <i class="bx bx-calendar-star isToday"></i>
-          </div>
-          <div class="todo">
-            <p>Budget and timeline discussion.</p>
-            <span>03 June 2025</span>
-          </div>
-          <div class="opButtons">
-            <i class="bx bx-checks"></i>
-            <i class="bx bx-trash"></i>
-          </div>
-        </div>
-
-        <div class="todoList">
-          <div class="todoIcon">
-            <i class="bx bx-calendar-star isToday"></i>
-          </div>
-          <div class="todo">
-            <p>Onboarding flow design.</p>
-            <span>03 June 2025</span>
-          </div>
-          <div class="opButtons">
-            <i class="bx bx-checks"></i>
-            <i class="bx bx-trash"></i>
-          </div>
-        </div>
-
-        <div class="todoList">
-          <div class="todoIcon">
-            <i class="bx bx-calendar-star isToday"></i>
-          </div>
-          <div class="todo">
-            <p>Animation interaction design.</p>
-            <span>03 June 2025</span>
-          </div>
-          <div class="opButtons">
-            <i class="bx bx-checks"></i>
-            <i class="bx bx-trash"></i>
-          </div>
-        </div>
+        <div class="todoShowList" id="todoShowList"></div>
       </div>
 
       <div class="todoContainer upcomingContainer">
         <p class="todoTitle">Coming Up</p>
 
-        <div class="todoList">
-          <div class="todoIcon">
-            <i class="bx bx-calendar-event"></i>
-          </div>
-          <div class="todo">
-            <p>Travel app development.</p>
-            <span>08 June 2025</span>
-          </div>
-          <div class="opButtons">
-            <i class="bx bx-checks"></i>
-            <i class="bx bx-trash"></i>
-          </div>
-        </div>
-
-        <div class="todoList">
-          <div class="todoIcon">
-            <i class="bx bx-calendar-event"></i>
-          </div>
-          <div class="todo">
-            <p>Client introduction and project scopes.</p>
-            <span>10 June 2025</span>
-          </div>
-          <div class="opButtons">
-            <i class="bx bx-checks"></i>
-            <i class="bx bx-trash"></i>
-          </div>
-        </div>
-
-        <div class="todoList">
-          <div class="todoIcon">
-            <i class="bx bx-calendar-event"></i>
-          </div>
-          <div class="todo">
-            <p>Brand identity discussion.</p>
-            <span>12 June 2025</span>
-          </div>
-          <div class="opButtons">
-            <i class="bx bx-checks"></i>
-            <i class="bx bx-trash"></i>
-          </div>
-        </div>
+        <div class="todoShowList" id="todoShowList"></div>
       </div>
     </main>
     <script src="./app.js"></script>
