Changed the format of task due date

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="todoContainer upcomingContainer">
         <p class="todoTitle">Coming Up</p>
 
-        <div class="todoShowList" id="todoShowList"></div>
+        <div class="todoShowList" id="upComingTodoShowList"></div>
       </div>
     </main>
     <script src="./app.js"></script>
