Empty page designed and cleared form when addTask button is clicked

--- a/index.html
+++ b/index.html
@@ -81,7 +81,16 @@
       <div class="todoContainer todayContainer" id="todoBoxContainer">
         <p class="todoTitle">Today</p>
 
-        <div class="todoShowList" id="todoShowList"></div>
+        <div class="todoShowList" id="todoShowList">
+          <div class="emptyTodoList">
+            <img src="/empty.svg" alt="empty trolley" width="200px" />
+            <h4>Empty todoList.</h4>
+            <span
+              >looks like you haven't added anything to your app. <br />
+              Go ahead and add new task.</span
+            >
+          </div>
+        </div>
       </div>
 
       <div class="todoContainer upcomingContainer">
