Mark as done option added and delete function done

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div class="todoContainer todayContainer" id="todoBoxContainer">
         <p class="todoTitle">Today</p>
 
-        <div class="todoShowList" id="todoShowList">
+        <div class="todoShowList" id="todaysTodoShowList">
           <div class="emptyTodoList">
             <img src="/empty.svg" alt="empty trolley" width="200px" />
             <h4>Empty todoList.</h4>
