Hided upcoming title when there is no upcoming todos.

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </div>
 
       <div class="todoContainer upcomingContainer">
-        <p class="todoTitle">Coming Up</p>
+        <p class="todoTitle" id="upcomingTitle">Coming Up</p>
 
         <div class="todoShowList" id="upComingTodoShowList"></div>
       </div>
