Fixed some minute errors before entering into localstorage

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
       </div>
 
-      <div class="todoContainer upcomingContainer">
+      <div class="todoContainer upcomingContainer" id="upcomingContainer">
         <p class="todoTitle" id="upcomingTitle">Coming Up</p>
 
         <div class="todoShowList" id="upComingTodoShowList"></div>
