Error Fix:Image Link Resetted

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
         <div class="todoShowList" id="todaysTodoShowList">
           <div class="emptyTodoList">
-            <img src="/empty.svg" alt="empty trolley" width="200px" />
+            <img src="./empty.svg" alt="empty trolley" width="200px" />
             <h4>Empty todoList.</h4>
             <span
               >looks like you haven't added anything to your app. <br />
